Changes in DTOs, introduced new DTO types Summary and Detailed, new GameRoleState endpoint. Custom constructors in mappers to use @Lazy annotation